[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/road.png" type="Texture" id=1]
[ext_resource path="res://scripts/main_player.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://images/1024px-Location_dot_red.svg.png" type="Texture" id=5]
[ext_resource path="res://scripts/player_col.gd" type="Script" id=6]

[sub_resource type="GDScript" id=1]
script/source = "extends Node
# Called when the node enters the scene tree for the first time.
func _ready():
	pass


# Called every frame. 'delta' is the elapsed time since the previou
func _on_Area2D_area_exited(area):
	pass # Replace with function body.
"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 62.9088, 17.294 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.2849, 1.20435 )

[node name="PlayerRoad" type="Node2D" groups=[
"player",
]]
script = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -1.22244, 1.894 )
script = ExtResource( 3 )

[node name="CPUParticles2D_nc" type="CPUParticles2D" parent="KinematicBody2D"]
position = Vector2( 17.7752, -0.704769 )
emitting = false
amount = 5
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 0, 0 )
gravity = Vector2( 0, 0 )
angle = 69.7
angle_random = 0.48
scale_amount = 44.01

[node name="Sprite_nc" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.901961, 0.815686, 0.815686, 1 )
position = Vector2( 17.9294, -0.122688 )
rotation = 1.5708
scale = Vector2( 0.5, 0.6 )
texture = ExtResource( 1 )

[node name="NextCamPos_nc" type="Node2D" parent="KinematicBody2D"]
position = Vector2( 38.5176, 1.894 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
position = Vector2( 55.763, 0.349247 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite2" type="Sprite" parent="KinematicBody2D"]
visible = false
position = Vector2( -3.96763, 0.471939 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="KinematicBody2D"]
visible = false
position = Vector2( 38.7268, 1.22369 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 16.9897, 0.471954 )
scale = Vector2( 10, 10 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.1, 1 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="Area2D" method="_on_Area2D_area_exited"]
